@@ -1,3 +1,10 @@
+2006-12-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* interfaces/python/src/graphobject.c (igraphmodule_Graph_delete_edges) :
+	added by_index keyword argument
+	* interfaces/python/package/__init__.py
+	(Graph.edge_betweenness_clustering) : added
+
 2006-11-30  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/games.c (igraph_callaway_traits_game) : bug corrected
